[tool.poetry]
name = "search-bot"
version = "0.1.0"
description = ""
authors = ["Nikita <didrexov@gmail.com>"]
readme = "README.md"
packages = [{include = "search_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
commitizen = "^2.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
